<resources>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoicGF0cml4LWRldiIsImEiOiJjbGFvNjc4YmgwZnN3M29seDJqNjd3cDh5In0.yns-PmbtEDqPHvryUVI17g</string>

    <string name="app_name">luzi</string>

    <string name="action_save">Guardar</string>
    <string name="action_retry">Reintentar</string>
    <string name="action_cancel">Cancelar</string>

    <string name="title_electricity">Luz</string>
    <string name="title_petrol">Gasolina</string>
    <string name="title_petrol_station">Gasolinera</string>
    <string name="title_rewards">Recompensas</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_city">Ciudad</string>
    <string name="title_total_amount">Total en euros</string>
    <string name="title_total_litres">Total de litros</string>
    <string name="title_date">Fecha</string>

    <string name="price_amount">%s €</string>
    <string name="price_petrol_magnitude">€/l</string>
    <string name="price_magnitude">€/kWh</string>
    <string name="price_minimum">Precio mínimo</string>
    <string name="price_maximum">Precio maximo</string>
    <string name="price_average">Precio medio</string>
    <string name="price_empty">-.-</string>

    <string name="loading_data_title">Cargando datos…</string>
    <string name="loading_petrol_data_title">Buscando gasolineras…</string>
    <string name="loading_data_description">Puede que tome unos minutos</string>
    <string name="hour_empty">A las —:—</string>
    <string name="hour_format">A las %s</string>
    <string name="date_selection">Selecciona una fecha</string>
    <string name="date_today">Hoy</string>
    <string name="location_at">En %s</string>
    <string name="no_gas_station_found">No se ha encontrado ninguna gasolinera en el municipio seleccionado</string>

    <!--  Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="title_geolocation">Localizacion</string>
    <string name="title_notifications">Enviar notificaciones</string>
    <string name="summary_off_notifications">No recibiras notificaciones</string>
    <string name="title_notifications_hour">Hora para recibir la notificacion</string>
    <string name="summary_on_notifications">Recibiras una notificacion diaria a las 10:00 para que revises el precio de la luz</string>
    <string name="title_ccaa">Comunidad autonoma</string>
    <string name="title_province">Provincia</string>
    <string name="title_municipality">Municipio</string>
    <string name="title_petrol_type">Tipo de producto</string>
    <string name="calendar_permission_error_title">Error al crear alerta</string>
    <string name="calendar_permission_error_description">Accede a los ajustes y habilita los permisos para acceder al calendario</string>
    <string name="calendar_alert_created">Alerta creada</string>
    <string name="calendar_alert_created_error">Error al crear alerta</string>
    <string name="calendar_alert_title">Precio de la luz</string>
    <string name="calendar_alert_description">Comienza la hora a %s</string>

    <!-- Sync Preferences -->
    <string name="title_fee">Tarifa</string>
    <string name="rewards_progress_empty">0/0</string>
    <string name="rewards_level_tag">Nivel %d</string>
    <string name="reward_not_available">No disponible hasta nivel %d</string>
    <string name="preference_reports_file">preference-reports-file</string>

    <!-- Widget -->
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_hours">Horario</string>
    <string name="preferences_saved">Preferencias actualizadas</string>

    <!-- Object types -->
    <string name="title_points">%d puntos</string>
    <string name="type_washing_machine">Lavadora</string>
    <string name="type_dishwasher">Lavavajillas</string>
    <string name="type_kettle">Kettle</string>
    <string name="type_oven">Horno</string>
    <string name="type_tv">TV</string>
    <string name="type_immersion_heater">Calentador</string>
    <string name="type_computer">Ordenador o portatil</string>
    <string name="type_other">Otro</string>

    <!-- Errors -->
    <string name="error_error_server_title">Error en el servidor</string>
    <string name="error_error_server_description">Intentelo mas tarde</string>
    <string name="error_electricity_not_available_title">Precio de la luz no disponible</string>
    <string name="error_electricity_not_available_decription">Los datos apareceran a partir de las 20:00 del día anterior consultado</string>
    <string name="title_reports">Registros</string>
    <string name="ok">OK</string>

    <!-- Dialogs -->
    <string name="dialog_validation_appliance_success">Electrodomestico registrado</string>
    <string name="dialog_validation_success_description">Recibiras %d puntos.</string>
    <string name="dialog_validation_success_description_no_points">No recibiras puntos.</string>
    <string name="dialog_validation_receipt_success">Recibo registrado</string>
    <string name="dialog_validation_receipt_success_description">Recibiras 2 puntos.</string>
    <string name="dialog_validation_receipt_success_description_no_points">No recibiras puntos.\n \nRecuerda que debe ser tomado con la fecha actual, debe ser expendido por una gasolinera del país y los valores introducidos deben ser reales.</string>
    <string name="dialog_validation_error">Error de validacion</string>
    <string name="dialog_validation_error_network">Error de conexion. No se pudo obtener el precio actual de la luz. \n \nPor favor intentelo mas tarde</string>
    <string name="dialog_validation_error_appliance_description">Parece que estas registrando un electrodomestico en una franja horaria no muy conveniente</string>
    <string name="dialog_points">Puntos</string>
    <string name="dialog_points_message">Tienes %d puntos. Solo necesitas %d mas para alcanzar el siguiente nivel. \n \n Recuerda que los puntos comenzaran a contar el día 1 de cada mes</string>
    <string name="dialog_points_message_max">Tienes %d puntos. Enhorabuena, has alcanzado el máximo nivel. \n \n Recuerda que los puntos comenzaran a contar el día 1 de cada mes</string>
    <string name="dialog_money">Ahorro</string>
    <string name="dialog_money_description">Ahorrados</string>
    <string name="dialog_money_message">Tu ahorro mensual es de %s€. \n \nTu gasto mensual es de %s€. \n \n Ten en cuenta que es una cifra aproximada ya que dependera del consumo particular de tu electrodomestico. </string>
    <string name="dialog_select_appliance">Selecciona un electrodomestico</string>
    <string name="title_receipt">Recibo</string>

</resources>