<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_electricity">

        <ListPreference
            app:defaultValue="peninsula"
            app:entries="@array/geo_limit_entries"
            app:entryValues="@array/geo_limit_values"
            app:key="geolocation"
            app:title="@string/title_geolocation"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="pvpc"
            app:entries="@array/fee_entries"
            app:entryValues="@array/fee_values"
            app:key="fee"
            app:title="@string/title_fee"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:summaryOff="@string/summary_off_notifications"
            app:summaryOn="@string/summary_on_notifications"
            app:title="@string/title_notifications" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_petrol">
        <ListPreference
            app:key="petrol_location_ccaa"
            app:title="@string/title_ccaa"
            app:summary="%s" />

        <ListPreference
            app:key="petrol_location_province"
            app:title="@string/title_province"
            app:summary="%s"/>

        <ListPreference
            app:key="petrol_location_municipality"
            app:title="@string/title_municipality"
            app:summary="%s" />

        <ListPreference
            app:key="petrol_product_type"
            app:title="@string/title_petrol_type"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>
    </PreferenceCategory>

</PreferenceScreen>