<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:padding="@dimen/margin_small">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/price_item_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Max Price" />

    <TextView
        android:id="@+id/tvPriceValue"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_empty"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPriceTag"
        style="@style/TextAppearance.HeaderText.Price.Magnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_magnitude"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriceValue"
        app:layout_constraintStart_toEndOf="@+id/tvPriceValue"
        app:layout_constraintTop_toTopOf="@+id/tvPriceValue" />

    <TextView
        android:id="@+id/tvPriceHour"
        style="@style/TextAppearance.HeaderText.Price.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_empty"
        app:layout_constraintEnd_toEndOf="@+id/tvPriceTag"
        app:layout_constraintStart_toStartOf="@+id/tvPriceValue"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceValue" />

</androidx.constraintlayout.widget.ConstraintLayout>